--- a/dev/src/scss/templates/_header.scss
+++ b/dev/src/scss/templates/_header.scss
@@ -369,6 +369,7 @@
 				margin-bottom: 0;
     		justify-content: space-between;
     		padding: 0 8px;
+    		width: 100%;
 			}
 			@media(max-width: 380px){
 				padding: 0;
