--- a/dev/src/scss/templates/_main.scss
+++ b/dev/src/scss/templates/_main.scss
@@ -1295,12 +1295,14 @@ body.light {
 	margin-bottom: 16px;
 
 	@media(max-width: 640px){
+		position: relative;
+		
 		&:after {
 			content: "";
 			position: absolute;
-			bottom: 42px;
-			left: 15px;
-			width: calc(100% - 30px);
+			bottom: 0;
+			left: 12px;
+			width: calc(100% - 24px);
 			height: 50px;
 			background: linear-gradient(180deg, rgba(34, 34, 33, 0.00) 0%, #222221 100%);
 		}
